--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^3.9.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
